2012-12-29	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* exult.cc, keyactions.*, keys.*: Walking and running keys no longer count
	  for the purposes of skipping faces, maps and such, as they could prevent
	  someone from ever seeing the face. Also, enforcing const-ness in KeyBinder
	  class and on key actions.
	Rev 7245:
	* actors.*, gamewin.cc, npctime.cc: Fixed bug #3598886 "HP < 1 should regen
	  faster than per hour".

2012-12-29	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* shapeid.h, shapes/vgafile.*, usecode/conversation.cc: Fixed bug #3001914:
	  "Cutted texts in voiceovers with Speech disabled" [sic] for the guardian
	  in BG. Also, fill whole game area with background color from large faces
	  so SI guardian and serpents cover the whole screen.
	* usecode/conversation.h: Spacing.
	Rev 7241:
	* usecode/conversation.cc: Center BG guardian vertically too.
	* actors.cc: Fixed bug #3186728 "SI: Incorrect property flags? (1.5.0svn)"
	  by applying okay-to-take flag *after* the NPC's stuff is moved to the
	  dead body.
	* gamemap.cc: Make sure okay-to-take flag is read for quantity shapes.
	Rev 7242:
	* actors.cc, gamewin.cc, shapes/items.h: Guards now bark messages when
	  coming to arrest you. People calling guards only yell if they can talk.
	  If there are no guards in the area, people will call for help instead
	  of calling guards. Guards are no longer called in dungeons, and people
	  will not yell for them in such places. This should fix bug #3186715
	  "SI: Automatons in MoF call guards (1.5.0svn)".
	Rev 7243:
	* objs/objs.cc: Added some (disabled by default) tracing facilities to debug
	  render order. One day...

2012-12-29	Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.cc: Only heal more than 1 hp through mend_hourly if the npc's
	  schedule is sleep.
	  Fix freezing check. Temp of 50 should do damage
	  Allow starving party members to regain health over time if below 0 hp.